# QGP3D

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  QGP3DConfig.cmake.in  README.md
cli/: CMakeLists.txt  main.cpp
cmake/: FindBONMIN.cmake  FindCBC.cmake  FindCLP.cmake  FindCoinUtils.cmake  FindGUROBI.cmake
include/QGP3D/: ConstraintExtractor.hpp  ConstraintWriter.hpp  MCQuantizer.hpp  ObjectiveBuilder.hpp  ObjectiveFunction.hpp  PathConstraint.hpp  Quantizer.hpp  SeparationChecker.hpp  StructurePreserver.hpp
include/QGP3D/IQP/: BaseIQPSolver.hpp  BonminIQPSolver.hpp  GurobiIQPSolver.hpp  IQPQuantizer.hpp
include/QGP3D/ISP/: BaseLPSolver.hpp  ClpLPSolver.hpp  GurobiLPSolver.hpp  ISPQuantizer.hpp
include/quant3d/: ConstraintExtractor.hpp  ConstraintWriter.hpp  MCQuantizer.hpp
src/: CMakeLists.txt  ConstraintExtractor.cpp  ConstraintWriter.cpp  MCQuantizer.cpp  ObjectiveBuilder.cpp  Quantizer.cpp  SeparationChecker.cpp  StructurePreserver.cpp
src/IQP/: BonminIQPSolver.cpp  GurobiIQPSolver.cpp  IQPQuantizer.cpp
src/ISP/: BaseLPSolver.cpp  ClpLPSolver.cpp  GurobiLPSolver.cpp  ISPQuantizer.cpp
